# api-docs/swagger.yaml
@@ -861,6 +861,8 @@ definitions:
     properties:
       allow_cpu:
         type: boolean
+      allow_output_changes:
+        type: boolean
       allow_shorter_windows:
         type: boolean
       cpu_precision:
@@ -907,6 +909,8 @@ definitions:
         type: integer
       max_retries:
         type: integer
+      recovery_strength:
+        type: string
       reduce_batch_size:
         type: boolean
       reuse_checkpoints:
@@ -1211,6 +1215,8 @@ definitions:
       succeeded:
         type: integer
       timing_samples:
+        type: integer
+      worker_retries:
         type: integer
     type: object
   models.RunStatistics:
